fix Bug #46032: PharData::__construct wrong memory read

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/branches/PHP_5_3@266116 c90b9560-bf6c-de11-be94-00142212c4b1